# QT-gists

./: README.md
ariphmometer/: widget.cpp  widget.h
cross/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
crosspoint/: crosspoint.pro  field.cpp  field.h  widget.cpp  widget.h
dynamic_widgets/: dialog.cpp  dialog.h  dynamic_widgets.pro  qdynamicbtn.cpp  qdynamicbtn.h
focus/: focus  focus.pro  icons.qrc  widget.cpp  widget.h
hbd_convert/: choose.cpp  choose.h  hbd_convert.pro  io.cpp  io.h  mainwindow.cpp  mainwindow.h
ip_line_edit/: dialog.cpp  dialog.h
macdonald_1/: widget.cpp  widget.h
minicalc/: inpane.cpp  inpane.h  minicalc.pro  outpane.cpp  outpane.h  resources.qrc  widget.cpp  widget.h
morze/: widget.cpp  widget.h
timer/: dialog.cpp  dialog.h
tray/: dialog.cpp  dialog.h  main.cpp  res.qrc  tray.pro
widgets_hide/: widget.cpp
